# WinEcho

./: CMakeLists.txt  CMakeSettings.json  README.md
WinEcho/: CMakeLists.txt
WinEcho/include/: CApiUtils.h  MyAudioCaptureClient.h  MyAudioClient.h  MyAudioRenderClient.h  MyMMDevice.h  MyMMDeviceEnumerator.h  RollingBuffer.h  StreamInstance.h  WinEchoApi.h
WinEcho/src/: MyAudioCaptureClient.cpp  MyAudioClient.cpp  MyAudioRenderClient.cpp  MyMMDevice.cpp  MyMMDeviceEnumerator.cpp  RollingBuffer.cpp  StrreamIsntance.cpp  WinEcho.cpp
